<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Vãi.com</string>
    <!-- Facebook app id -->
    <string name="app_id">578437172192441</string>
    <string name="admob_id">a152bef79f598c2</string>
    <!-- Google api key debug -->
    <!-- <string name="common_google_map_api_key">AIzaSyBdh4XPUavbP-kTT7i02tBBv9vai7x9_oY</string> -->


    <!-- Google api key release -->
    <string name="common_google_map_api_key">AIzaSyAshwfRl4tYwcoRKm4fRRb1LzAvOsoFDO4</string>
    <string name="msg_err_cannot_like_now">Cannot like content now!</string>
    <string name="msg_err_move_temporarily">Already sent</string>
    <string name="msg_err_bad_request">Data sent to server incorrectly, please try again later.</string>
    <string name="msg_err_invalid_token">Your account may be used by another person</string>
    <string name="msg_err_forbidden">Forbidden. You have no right to access the resource</string>
    <string name="msg_err_not_found">Not found</string>
    <string name="msg_err_conflict">Conflict</string>
    <string name="msg_err_server_error">There is an error from server</string>
    <string name="msg_err_connecting_error">No network connectivity, please check your network and try again later.</string>
    <string name="msg_err_data_error">Response data is not as expected</string>
    <string name="msg_err_something_wrong">Something went wrong. Please try again!</string>
    <string name="msg_err_share_failed">Cannot share to facebook</string>
    <string name="msg_info_share_successfully">Share to facebook successfully</string>
    <string name="msg_info_no_data_result">No data result</string>
    <string name="msg_info_download_complete">Download complete.</string>
    <string name="msg_info_loading">Loading</string>
    <string name="empty"></string>
    <string name="menu_options">Options</string>
    <string name="menu_more">More</string>
    <string name="refresh">Refresh</string>
    <string name="loading_more">Loading more &#8230;</string>
    <string name="login_failed">Login failed</string>

    <!-- Options screen -->
    <string name="options_vai_description">Vãi App: Ai là thánh bá đạo nhất :)</string>
    <string name="options_connect_facebook">CONNECT TO FACEBOOK</string>
    <string name="options_login_facebook">Login Facebook</string>
    <string name="options_login">Login</string>
    <string name="options_logout">Logout</string>
    <string name="options_title">OPTIONS</string>
    <string name="options_clear_cache">Clear cache</string>
    <string name="options_rate">Rate Vãi App on Google Play ^^</string>
    <string name="options_view_style">View style</string>
    <string name="options_horizontal_style">Horizontal</string>
    <string name="options_vertical_style">Vertical</string>

    <!-- Youtube player -->
    <string name="youtube_error_player">There was an error initializing the YouTubePlayer (%1$s)</string>

</resources>