<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white" >

    <ImageView
        android:id="@+id/imgIcon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:contentDescription="@string/empty"
        android:padding="@dimen/common_margin_medium"
        android:scaleType="centerCrop"
        android:src="@drawable/first_screen_icon" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/imgIcon"
        android:gravity="center_horizontal"
        android:text="@string/options_vai_description"
        android:textSize="@dimen/textsize_medium" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:gravity="center_horizontal"
        android:padding="@dimen/common_margin_medium"
        android:text="@string/app_name"
        android:textSize="@dimen/textsize_medium" />

</RelativeLayout>